Calculator added builder method

--- a/style.css
+++ b/style.css
@@ -104,3 +104,13 @@
     }
   }
   
+  .calc-block {
+    display: flex; 
+    flex-direction: row; 
+    justify-content: center; 
+    align-items: center;
+  }
+
+  .calc-field {
+      width: 15%;
+  }
